tests/baselines/reference/jsxAttributeMissingInitializer.errors.txt
jsxAttributeMissingInitializer.tsx(1,11): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
jsxAttributeMissingInitializer.tsx(1,21): error TS1145: '{' or JSX element expected.
jsxAttributeMissingInitializer.tsx(1,22): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.


==== jsxAttributeMissingInitializer.tsx (3 errors) ====
    const x = <div foo= ></div>;
              ~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                        ~
!!! error TS1145: '{' or JSX element expected.
                         ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    const y = 0;
    